--- a/platzi/nuxt-2-miniblog/package.json
+++ b/platzi/nuxt-2-miniblog/package.json
@@ -18,6 +18,8 @@
     "vue-router": "^4.3.0"
   },
   "devDependencies": {
-    "@nuxtjs/tailwindcss": "^6.12.0"
+    "@nuxtjs/tailwindcss": "^6.12.0",
+    "prettier": "^3.2.5",
+    "prettier-plugin-tailwindcss": "^0.5.14"
   }
 }
