--- a/platzi/nuxt-2-miniblog/package.json
+++ b/platzi/nuxt-2-miniblog/package.json
@@ -14,12 +14,14 @@
   "dependencies": {
     "@nuxt/eslint": "^0.3.10",
     "nuxt": "^3.11.2",
-    "vue": "^3.4.21",
-    "vue-router": "^4.3.0"
+    "vue": "^3.4.26",
+    "vue-router": "^4.3.2"
   },
   "devDependencies": {
+    "@nuxtjs/stylelint-module": "^5.2.0",
     "@nuxtjs/tailwindcss": "^6.12.0",
     "prettier": "^3.2.5",
-    "prettier-plugin-tailwindcss": "^0.5.14"
+    "prettier-plugin-tailwindcss": "^0.5.14",
+    "stylelint": "^16.4.0"
   }
 }
